<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverLoginActivity"
    android:orientation="vertical"
    android:background="#fffc00">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="Hello, Please Sign In"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="5dp"
        android:hint="@string/DriverEmail"
        android:inputType="text" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="5dp"
        android:hint="@string/DriverPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/custom_button1"
        android:text="@string/DriverLogin"
        android:textSize="16sp" />

    <Button
        android:id="@+id/registration"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button2"

        android:text="@string/DriverRegister"
        android:textSize="16sp" />

</LinearLayout>